force-app/main/default/objects/Mateco_Theme_Oppsnap_shot__c/Mateco_Theme_Oppsnap_shot__c.object-meta.xml
<CustomObject>
    <label>マテコテーマ商談スナップショット</label>
    <nameField>
        <displayFormat>MT-{0000}</displayFormat>
        <label>マテコテーマ商談スナップショット名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>