force-app/main/default/objects/Mateco_Theme_Oppsnap_shot__c/fields/AnnualEstimatedProfitAmount__c.field-meta.xml
<CustomField>
    <fullName>AnnualEstimatedProfitAmount__c</fullName>
    <label>年間利益想定額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>