force-app/main/default/objects/Mateco_Theme_Oppsnap_shot__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>IF(
    ISBLANK(Theme__c),
    &quot;商談&quot;,
    &quot;テーマ&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>分類</label>
    <type>Text</type>
</CustomField>