force-app/main/default/objects/Mateco_Theme_Oppsnap_shot__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>担当部署</label>
    <length>36</length>
    <type>Text</type>
</CustomField>