force-app/main/default/objects/Mateco_Theme_Oppsnap_shot__c/fields/EstimatedAmount__c.field-meta.xml
<CustomField>
    <fullName>EstimatedAmount__c</fullName>
    <label>年間売上想定額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>