force-app/main/default/objects/Mateco_Theme_Oppsnap_shot__c/fields/MT_Target__c.field-meta.xml
<CustomField>
    <fullName>MT_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <label>市場対象</label>
    <type>Checkbox</type>
</CustomField>