force-app/main/default/objects/Mateco_Theme_Oppsnap_shot__c/fields/MT_TargetCategory__c.field-meta.xml
<CustomField>
    <fullName>MT_TargetCategory__c</fullName>
    <label>注力_マテコ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>