force-app/main/default/objects/Mateco_Theme_Oppsnap_shot__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>マテコテーマ商談スナップショット</relationshipLabel>
    <relationshipName>Opportunity_Mateco_Theme_Oppsnap_shot</relationshipName>
    <type>Lookup</type>
</CustomField>