force-app/main/default/objects/Mateco_Theme_Oppsnap_shot__c/fields/ownerText__c.field-meta.xml
<CustomField>
    <fullName>ownerText__c</fullName>
    <formula>IF(
  ISBLANK(Theme__c),
  TRIM( Opportunity__r.Owner.LastName  &amp; &quot; &quot; &amp; Opportunity__r.Owner.FirstName),
  TRIM( Theme__r.Owner:User.LastName  &amp; &quot; &quot; &amp;  Theme__r.Owner:User.FirstName )
)</formula>
    <label>レコード所有者</label>
    <type>Text</type>
</CustomField>