force-app/main/default/objects/Mateco_Theme_Oppsnap_shot__c/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <label>フェーズ</label>
    <length>20</length>
    <type>Text</type>
</CustomField>