force-app/main/default/objects/Mateco_Theme_Oppsnap_shot__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>テーマ</label>
    <referenceTo>Theme__c</referenceTo>
    <relationshipLabel>マテコテーマ商談スナップショット</relationshipLabel>
    <relationshipName>Theme_Mateco_Theme_Oppsnap_shot</relationshipName>
    <type>Lookup</type>
</CustomField>