force-app/main/default/objects/Mateco_Theme_Oppsnap_shot__c/fields/ThemeAccount__c.field-meta.xml
<CustomField>
    <fullName>ThemeAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>テーマ商談スナップショット</relationshipLabel>
    <relationshipName>ThemeAccount_xz2</relationshipName>
    <type>Lookup</type>
</CustomField>