force-app/main/default/objects/Mateco_Theme_Oppsnap_shot__c/fields/ThisTermEstimatedProfitAmount__c.field-meta.xml
<CustomField>
    <fullName>ThisTermEstimatedProfitAmount__c</fullName>
    <label>今期利益想定額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>